--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voice Chat App</title>
   </head>
@@ -11,8 +11,8 @@
         <div id="room-header">
           <h1 id="room-name"></h1>
           <div id="room-header-controls">
-            <img id="mic-icon" class="control-icon" src="/icons/mic-off.svg" />
-            <img id="leave-icon" class="control-icon" src="/icons/leave.svg" />
+            <img id="mic-icon" class="control-icon" src="icons/mic-off.svg" />
+            <img id="leave-icon" class="control-icon" src="icons/leave.svg" />
           </div>
         </div>
     
@@ -21,14 +21,14 @@
             <h3>Select An Avatar:</h3>
           </div>
           <div id="avatars">
-              <img class="avatar-selection" src="/avatars/male-1.png"/>
-              <img class="avatar-selection" src="/avatars/male-2.png"/>
-              <img class="avatar-selection" src="/avatars/male-4.png"/>
-              <img class="avatar-selection" src="/avatars/male-5.png"/>
-              <img class="avatar-selection" src="/avatars/female-1.png"/>
-              <img class="avatar-selection" src="/avatars/female-2.png"/>
-              <img class="avatar-selection" src="/avatars/female-4.png"/>
-              <img class="avatar-selection" src="/avatars/female-5.png"/>
+              <img class="avatar-selection" src="avatars/male-1.png"/>
+              <img class="avatar-selection" src="avatars/male-2.png"/>
+              <img class="avatar-selection" src="avatars/male-4.png"/>
+              <img class="avatar-selection" src="avatars/male-5.png"/>
+              <img class="avatar-selection" src="avatars/female-1.png"/>
+              <img class="avatar-selection" src="avatars/female-2.png"/>
+              <img class="avatar-selection" src="avatars/female-4.png"/>
+              <img class="avatar-selection" src="avatars/female-5.png"/>
           </div> 
 
           <div id="form-fields">
@@ -45,6 +45,6 @@
         <div id="members">
         </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
